--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>刘的测试</title><base target="_blank" />
-<link rel="stylesheet" type="text/css" href="http://hovertree.com/texiao/html5/43/css/normalize.css" />
-<link rel="stylesheet" type="text/css" href="http://hovertree.com/texiao/html5/43/css/hovertree.css">
+<link rel="stylesheet" type="text/css" 001.css" />
+<link rel="stylesheet" type="text/css" href="002.css">
 
 <style>
     #modal {
@@ -108,8 +108,8 @@
 	  
   </script>
 
-<script type="text/javascript" src="http://down.hovertree.com/jquery/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="http://hovertree.com/texiao/html5/43/js/jquery.fireworks.js"></script>
+<script type="text/javascript" src="003.js"></script>
+<script type="text/javascript" src="004.js"></script>
 <script type="text/javascript">
    var fx = $('.hovertree').fireworks({
       sound: true, // sound effect
